--- a/pages/about.html
+++ b/pages/about.html
@@ -63,10 +63,7 @@
                 At the core of CAg Industries' ethos lies a commitment to professionalism and quality of service. The driving force behind the firm's success is the proven skills and dedication of its people. With a team of technically trained and qualified professionals, CAg Industries strives to establish and maintain effective schemes for developing a foolproof quality management system. This system is implemented under the direct supervision of management, ensuring that every aspect of production meets the highest standards of quality and reliability.
               </p>
               <br />
-              
-              <p>
-                CAg Industries is not content with resting on past achievements; instead, it remains a dynamic and vibrant entity focused on continuous improvement. The firm places a strong emphasis on constant upgradation of its systems, technology, and human resources to achieve and exceed the quality targets set by the organization. Through a combination of hard work and modern management techniques, CAg Industries actively promotes excellence in the quality of its products, leading to greater efficiency and profitability.
-              </p>
+         
             </div>
             <div class="right">
               <img
@@ -74,29 +71,8 @@
                 alt=""
               />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Quibusdam optio eaque totam aut atque alias, perferendis quam
-                non nisi, ut quia suscipit cum quos blanditiis nam nobis ea
-                deleniti nemo doloremque voluptatum exercitationem. Veritatis,
-                corporis eveniet consequatur cum rerum facilis dolorem, quasi
-                delectus illum, illo autem culpa. Hic quos sunt cum, eaque ad
-                architecto perspiciatis alias unde facere, ex earum, quo tempore
-                obcaecati tempora. Modi numquam nihil non dolorum ullam porro
-                rerum aspernatur dolores cumque, incidunt, iste deserunt
-                blanditiis expedita reprehenderit recusandae? Mollitia inventore
-                modi laboriosam, dignissimos fuga, rerum perspiciatis molestiae
-                alias minus voluptate optio ad recusandae itaque unde quia
-                adipisci tempora iure expedita. Repudiandae cupiditate cumque
-                ipsa? Fuga qui, molestias expedita obcaecati eos libero mollitia
-                esse harum aperiam eius rem ab optio quia, voluptates incidunt
-                totam? Tempore expedita fugit asperiores sint quae, perferendis
-                aut esse voluptates doloremque aperiam architecto iure laborum
-                hic, inventore est! Incidunt quis error impedit suscipit enim
-                praesentium. Eius natus, perspiciatis dicta id aperiam
-                laboriosam. Nobis illum molestiae error sit exercitationem
-                repudiandae provident tempora cum magni culpa recusandae
-                mollitia aut rem obcaecati reiciendis, perferendis sunt
-                officiis.
+                CAg Industries is not content with resting on past achievements; instead, it remains a dynamic and vibrant entity focused on continuous improvement. The firm places a strong emphasis on constant upgradation of its systems, technology, and human resources to achieve and exceed the quality targets set by the organization. Through a combination of hard work and modern management techniques, CAg Industries actively promotes excellence in the quality of its products, leading to greater efficiency and profitability.
+
               </p>
             </div>
           </section>
@@ -120,6 +96,8 @@
           <span> <i class="fa-solid fa-envelope"></i> support@cagindustries.in</span>
           <span> <i class="fa-solid fa-envelope"></i> info@cagindustries.in</span>
           <span> <i class="fa-solid fa-phone"></i> +91 8037404327</span>
+          <span> <i class="fa-solid fa-phone"></i> +91 9830951383</span>
+
           <div class="icons">
             <a href="https://g.co/kgs/E7WXVkK" target="_blank">
               <i class="fa-brands fa-google"></i>
