--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -6,6 +6,7 @@
     <title>Contact Us</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.css">
     <link rel="stylesheet" href="style.css" />
     <!-- Fontawesome icon -->
     <link
@@ -70,6 +71,7 @@
             <span><i class="fas fa-mobile-alt"></i></span>
             <span>Phone No.</span>
             <span class="text">+91 80374 04327</span>
+            <span class="text">+91 98309 51383</span>
           </div>
           <div>
             <span><i class="fas fa-envelope-open"></i></span>
@@ -152,6 +154,8 @@
         <span> <i class="fa-solid fa-envelope"></i> support@cagindustries.in</span>
         <span> <i class="fa-solid fa-envelope"></i> info@cagindustries.in</span>
         <span> <i class="fa-solid fa-phone"></i> +91 8037404327</span>
+        <span> <i class="fa-solid fa-phone"></i> +91 9830951383</span>
+
         <div class="icons">
           <a href="https://g.co/kgs/E7WXVkK" target="_blank">
             <i class="fa-brands fa-google"></i>
@@ -168,6 +172,7 @@
   </body>
   <script src="https://smtpjs.com/v3/smtp.js"></script>
   <script src="../../script/sendmail.js"></script>
+  <script src="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.min.js"></script>
   <script
   src="https://kit.fontawesome.com/8cfc6428ac.js"
   crossorigin="anonymous"
