--- a/pages/product1.html
+++ b/pages/product1.html
@@ -57,11 +57,40 @@
         <div class="dtls">
           <h1>Silver Impregnated Graphite Contacts</h1>
           <p>
-            Silver impregnated graphite contacts are specialized electrical contacts commonly used in electrical switches, relays, and other applications where low voltage and low current signals are transmitted. These contacts are typically composed of a base material, such as graphite, which is impregnated or coated with silver. <br>
-            The addition of silver to graphite contacts enhances their conductivity and improves their resistance to wear and corrosion. Silver is chosen for its excellent electrical conductivity, making it an ideal material for transmitting electrical signals with minimal loss. Graphite, on the other hand, provides mechanical strength and stability to the contacts. <br>
-            The impregnation process involves embedding silver particles into the graphite matrix, either through chemical or mechanical methods. This ensures uniform distribution of silver throughout the contact material, maximizing conductivity and minimizing contact resistance.
+            Silver impregnated graphite contacts are specialized electrical
+            contacts commonly used in electrical switches, relays, and other
+            applications where low voltage and low current signals are
+            transmitted. These contacts are typically composed of a base
+            material, such as graphite, which is impregnated or coated with
+            silver. <br />
+            The addition of silver to graphite contacts enhances their
+            conductivity and improves their resistance to wear and corrosion.
+            Silver is chosen for its excellent electrical conductivity, making
+            it an ideal material for transmitting electrical signals with
+            minimal loss. Graphite, on the other hand, provides mechanical
+            strength and stability to the contacts. <br />
+            The impregnation process involves embedding silver particles into
+            the graphite matrix, either through chemical or mechanical methods.
+            This ensures uniform distribution of silver throughout the contact
+            material, maximizing conductivity and minimizing contact resistance.
           </p>
         </div>
+      </div>
+      <div id="page-2">
+        <section style="text-align: center">
+          <h1>Related Products</h1>
+          <span
+            >One of the best manufacturers of Silver Impregnated Graphite
+            Contact in India</span
+          >
+        </section>
+
+        <a href="./product2.html">
+          <div class="p-box">
+            <img src="../resources/pro2_1.png" alt="" />
+            <span>Silver Impregnated Graphite Heavy Duty Contacts</span>
+          </div>
+        </a>
       </div>
       <footer>
         <section>
@@ -78,9 +107,15 @@
           </nav>
         </section>
         <section class="con">
-          <span> <i class="fa-solid fa-envelope"></i> support@cagindustries.in</span>
-          <span> <i class="fa-solid fa-envelope"></i> info@cagindustries.in</span>
+          <span>
+            <i class="fa-solid fa-envelope"></i> support@cagindustries.in</span
+          >
+          <span>
+            <i class="fa-solid fa-envelope"></i> info@cagindustries.in</span
+          >
           <span> <i class="fa-solid fa-phone"></i> +91 8037404327</span>
+          <span> <i class="fa-solid fa-phone"></i> +91 9830951383</span>
+
           <div class="icons">
             <a href="https://g.co/kgs/E7WXVkK" target="_blank">
               <i class="fa-brands fa-google"></i>
@@ -98,7 +133,7 @@
   </body>
   <script src="../script/script.js"></script>
   <script
-  src="https://kit.fontawesome.com/8cfc6428ac.js"
-  crossorigin="anonymous"
-></script>
+    src="https://kit.fontawesome.com/8cfc6428ac.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
