--- a/pages/about.html
+++ b/pages/about.html
@@ -24,10 +24,14 @@
             <li><a href="./contact/index.html" class="nav">Contact</a></li>
           </ul>
           <div id="srch">
-            <input type="text" placeholder="Search..." />
-            <div class="s-icon">
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
+            <input id="input_box" type="text" placeholder="Search..." />
+              <div class="s-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </div>
+
+              <div class="result">
+                
+              </div>
           </div>
         </nav>
         <div class="menu-icon">
@@ -67,7 +71,7 @@
             </div>
             <div class="right">
               <img
-                src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                src=""
                 alt=""
               />
               <p>
