--- a/pages/product1.html
+++ b/pages/product1.html
@@ -32,9 +32,13 @@
             <li><a href="./contact/index.html" class="nav">Contact</a></li>
           </ul>
           <div id="srch">
-            <input type="text" placeholder="Search..." />
+            <input id="input_box" type="text" placeholder="Search..." />
             <div class="s-icon">
               <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+
+            <div class="result">
+              
             </div>
           </div>
         </nav>
