--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </ul>
         </nav>
       </div>
-
+      
       <div id="page-1">
         <header class="header">
           <div id="logo">
@@ -37,17 +37,14 @@
               </li>
             </ul>
             <div id="srch">
-              <input type="text" placeholder="Search..." />
+              <input id="input_box" type="text" placeholder="Search..." />
               <div class="s-icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
               </div>
 
-              <!-- <div class="result">
-                <ul>
-                  <li>SIG</li>
-                  <li>SIG</li>
-                </ul>
-              </div> -->
+              <div class="result">
+                
+              </div>
             </div>
           </nav>
           <div class="menu-icon">
@@ -269,7 +266,7 @@
         <section id="sec-3">
           <img
             class="s-img3"
-            src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            src=""
             alt=""
           />
 
