--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -41,9 +41,13 @@
           <li><a href="./index.html" class="nav active">Contact</a></li>
         </ul>
         <div id="srch">
-          <input type="text" placeholder="Search..." />
+          <input id="input_box" type="text" placeholder="Search..." />
           <div class="s-icon">
             <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+
+          <div class="result">
+            
           </div>
         </div>
       </nav>
