--- a/pages/product1.html
+++ b/pages/product1.html
@@ -61,22 +61,7 @@
         <div class="dtls">
           <h1>Silver Impregnated Graphite Contacts</h1>
           <p>
-            Silver impregnated graphite contacts are specialized electrical
-            contacts commonly used in electrical switches, relays, and other
-            applications where low voltage and low current signals are
-            transmitted. These contacts are typically composed of a base
-            material, such as graphite, which is impregnated or coated with
-            silver. <br />
-            The addition of silver to graphite contacts enhances their
-            conductivity and improves their resistance to wear and corrosion.
-            Silver is chosen for its excellent electrical conductivity, making
-            it an ideal material for transmitting electrical signals with
-            minimal loss. Graphite, on the other hand, provides mechanical
-            strength and stability to the contacts. <br />
-            The impregnation process involves embedding silver particles into
-            the graphite matrix, either through chemical or mechanical methods.
-            This ensures uniform distribution of silver throughout the contact
-            material, maximizing conductivity and minimizing contact resistance.
+            Silver Impregnated Graphite (SIG) contacts are used in high safety applications of railway signaling, traffic signaling, and numerous other applications due to high silver content that eliminates the risk of welding in the presence of graphite. SIG relay contacts combine the best properties of silver (electrical/thermal conductivity) and graphite (refractory nature) into a composite material. Distinctive features of the SIG material include its hard fusing characteristic, better conduction of heat and electricity, and easy brazing. Graphite carbon has high heat of vaporization and appreciably low material transfer in the localized high temperature spots developed during mating of contacts. Additionally, due to a high percentage of silver, the desired electrical properties are retained with practically no risk of welding. This combination of properties makes these contacts suitable for high safety applications such as railway signaling, traffic signaling, and numerous other applications.
           </p>
         </div>
       </div>
@@ -111,13 +96,8 @@
           </nav>
         </section>
         <section class="con">
-          <span>
-            <i class="fa-solid fa-envelope"></i> support@cagindustries.in</span
-          >
-          <span>
-            <i class="fa-solid fa-envelope"></i> info@cagindustries.in</span
-          >
-          <span> <i class="fa-solid fa-phone"></i> +91 8037404327</span>
+          <span> <i class="fa-solid fa-envelope"></i>cagindustries21@gmail.com</span>
+          <span> <i class="fa-solid fa-phone"></i> +91 8240563793</span>
           <span> <i class="fa-solid fa-phone"></i> +91 9830951383</span>
 
           <div class="icons">
