--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -74,14 +74,13 @@
           <div>
             <span><i class="fas fa-mobile-alt"></i></span>
             <span>Phone No.</span>
-            <span class="text">+91 80374 04327</span>
             <span class="text">+91 98309 51383</span>
+            <span class="text">+91 82405 63793</span>
           </div>
           <div>
             <span><i class="fas fa-envelope-open"></i></span>
             <span>E-mail</span>
-            <span class="text">info@cagindustries.in</span>
-            <span class="text">support@cagindustries.in</span>
+            <span class="text">cagindustries21@gmail.com</span>
           </div>
           <div>
             <span><i class="fas fa-map-marker-alt"></i></span>
@@ -93,7 +92,7 @@
           <div>
             <span><i class="fas fa-clock"></i></span>
             <span>Opening Hours</span>
-            <span class="text">Monday - Friday (9:00 AM to 5:00 PM)</span>
+            <span class="text">Monday - Saturday (9:00 AM to 6:00 PM)</span>
           </div>
         </div>
 
@@ -155,9 +154,9 @@
         </nav>
       </section>
       <section class="con">
-        <span> <i class="fa-solid fa-envelope"></i> support@cagindustries.in</span>
-        <span> <i class="fa-solid fa-envelope"></i> info@cagindustries.in</span>
-        <span> <i class="fa-solid fa-phone"></i> +91 8037404327</span>
+   
+        <span> <i class="fa-solid fa-envelope"></i>cagindustries21@gmail.com</span>
+        <span> <i class="fa-solid fa-phone"></i> +91 8240563793</span>
         <span> <i class="fa-solid fa-phone"></i> +91 9830951383</span>
 
         <div class="icons">
