--- a/pages/product2.html
+++ b/pages/product2.html
@@ -97,10 +97,9 @@
               </nav>
             </section>
             <section class="con">
-              <span> <i class="fa-solid fa-envelope"></i> support@cagindustries.in</span>
-              <span> <i class="fa-solid fa-envelope"></i> info@cagindustries.in</span>
-              <span> <i class="fa-solid fa-phone"></i> +91 8037404327</span>
-          <span> <i class="fa-solid fa-phone"></i> +91 9830951383</span>
+              <span> <i class="fa-solid fa-envelope"></i>cagindustries21@gmail.com</span>
+              <span> <i class="fa-solid fa-phone"></i> +91 8240563793</span>
+              <span> <i class="fa-solid fa-phone"></i> +91 9830951383</span>
 
               <div class="icons">
                 <a href="https://g.co/kgs/E7WXVkK" target="_blank">
