--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CAg Industries</title>
   </head>
+  <link rel="icon" type="image/x-icon" href="./resources/logo.png">
   <link rel="stylesheet" href="./style/style.css" />
   <link rel="stylesheet" href="./style/footer.css" />
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"> -->
@@ -83,16 +84,13 @@
       <div id="cer-page">
         <section id="cer-ani">
           <h1>Certified by</h1>
-          <span>ISO 14001-2015, ISO 9001-2015 & MSME</span>
+          <span>ISO 14001-2015, ISO 9001-2015</span>
           <div class="crts">
             <a href="./pages/about.html">
               <img src="./resources/cer1.jpg" alt="" />
             </a>
             <a href="./pages/about.html">
               <img src="./resources/cer2.jpg" alt="" />
-            </a>
-            <a href="./pages/about.html">
-              <img src="./resources/cer3.jpg" alt="" />
             </a>
           </div>
           <a href="./pages/about.html">
@@ -219,7 +217,7 @@
               >
             </div>
           </a>
-          <a href="./pages/product2.html">
+          <a href="./pages/product1.html">
             <div class="p-boxR">
               <div class="img">
                 <img src="./resources/pro2_1.png" alt="" />
@@ -282,7 +280,7 @@
               suitable for high safety applications such as railway signaling,
               traffic signaling, and numerous other applications.
             </p>
-            <a href="./pages/product2.html">
+            <a href="./pages/product1.html">
               <button>View More</button>
             </a>
           </div>
@@ -299,7 +297,7 @@
               manufacturing of Silver Impregnated Graphite Contacts, stands as a
               testament to years of dedication, technical expertise, and a
               commitment to excellence. Founded on a solid foundation of
-              technical knowledge and experience garnered through systematic
+              technical knowledge and experience gathered through systematic
               research, CAg Industries has emerged as a trusted provider of
               high-quality contacts for various railway signaling relay
               manufacturers and Indian Railways.
@@ -309,7 +307,7 @@
               profound understanding of the intricacies of contact operation and
               an unwavering focus on quality, the firm has developed Silver
               Impregnated Graphite Contacts that are compatible with a wide
-              range of signaling relays conforming to BRS Standards. This
+              range of signaling relays conforming to IRS S-67-85 Standards. This
               compatibility has been validated by a vast database of satisfied
               customers who rely on CAg Industries' products for critical
               contact applications.
