--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,7 @@
               CAg Industries is a partnership firm established in March 2021 for
               manufacturing Silver Impregnated Graphite (SIG) contacts used in
               'Q' Type Relays for Railway Signalling. The product is
-              manufactured under the specifications defined under IRS 67-85
+              manufactured under the specifications defined under  IRS S-67-85
               published by Research Design and Standard Organisation (RDSO).
               <br /> <br>
               The firm has its works and office located at 24 Parganas (S),
@@ -78,7 +78,6 @@
         <section>
           <img src="../resources/cer1.jpg" alt="" />
           <img src="../resources/cer2.jpg" alt="" />
-          <img src="../resources/cer3.jpg" alt="" />
         </section>
       </div>
       <footer>
