--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -86,7 +86,7 @@
             <span><i class="fas fa-map-marker-alt"></i></span>
             <span>Address</span>
             <span class="text"
-              >JL NO. 16, , P.O : Rasapunja Bakrahat Road, J R Industrial Estate,, Banagram, Bishnupur, Kolkata-700104, West Bengal, India</span
+              >JL No. 16, J R Industrial Estate, Bakrahat Road, Banagram, P.O - Rasapunja, 24 Parganas South, Kolkata - 700104, West Bengal, India</span
             >
           </div>
           <div>
