--- a/pages/product1.html
+++ b/pages/product1.html
@@ -61,26 +61,30 @@
         <div class="dtls">
           <h1>Silver Impregnated Graphite Contacts</h1>
           <p>
-            Silver Impregnated Graphite (SIG) contacts are used in high safety applications of railway signaling, traffic signaling, and numerous other applications due to high silver content that eliminates the risk of welding in the presence of graphite. SIG relay contacts combine the best properties of silver (electrical/thermal conductivity) and graphite (refractory nature) into a composite material. Distinctive features of the SIG material include its hard fusing characteristic, better conduction of heat and electricity, and easy brazing. Graphite carbon has high heat of vaporization and appreciably low material transfer in the localized high temperature spots developed during mating of contacts. Additionally, due to a high percentage of silver, the desired electrical properties are retained with practically no risk of welding. This combination of properties makes these contacts suitable for high safety applications such as railway signaling, traffic signaling, and numerous other applications.
+            Silver Impregnated Graphite (SIG) contacts are used in high safety applications of railway signaling, traffic signaling, and numerous other applications content that eliminates the risk of welding in the presence of graphite. SIG relay contacts combine the best properties of silver and graphite into a composite material. Distinctive features of the SIG material include its hard fusing characteristic, better conduction of heat and electricity, and easy brazing.This combination of properties makes these contacts suitable for high safety applications such as railway signaling, traffic signaling, and numerous other applications.
           </p>
         </div>
       </div>
-      <div id="page-2">
-        <section style="text-align: center">
-          <h1>Related Products</h1>
-          <span
-            >One of the best manufacturers of Silver Impregnated Graphite
-            Contact in India</span
-          >
-        </section>
-
-        <a href="./product2.html">
-          <div class="p-box">
-            <img src="../resources/pro2_1.png" alt="" />
-            <span>Silver Impregnated Graphite Heavy Duty Contacts</span>
-          </div>
-        </a>
+      <div id="page-1">
+        <div class="dtls">
+          <h1>Silver Impregnated Graphite 
+            Heavy Duty Contacts</h1>
+          <p>Silver impregnated graphite contacts for heavy-duty applications are engineered to withstand the rigors of high current loads, frequent switching cycles, and harsh operating conditions. These contacts feature enhanced conductivity due to silver impregnation, ensuring efficient electrical transmission even under heavy loads. Constructed with robust materials and techniques, they withstand mechanical stresses such as impact and vibration. Their high wear resistance, derived from silver impregnation, guarantees prolonged service life despite frequent switching. Moreover, they offer corrosion resistance, crucial for harsh environments with high humidity, dust, or chemical exposure. Engineered for temperature stability, they maintain performance across a wide range of conditions. With low contact resistance, they minimize energy loss and heat generation, vital for heavy-duty operations. Selection considerations include current rating, switching frequency, environmental factors, mechanical compatibility, adherence to reliability standards, and maintenance requirements.</p>
       </div>
+        <div class="imgs">
+            <section class="b-imgs2">
+                <img id="img2" src="../resources/p2.webp" alt="">
+            </section>
+            <section class="s-imgs2">
+                <img src="../resources/p2.webp" alt="">
+                <img src="../resources/pro2_1.png" alt="">
+                <img src="../resources/pro2_2.jpg" alt="">
+                <img src="../resources/pro2_3.webp" alt="">
+            </section>
+        </div>
+       
+        
+    </div>
       <footer>
         <section>
           <div class="logo">
