--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CAg Industries</title>
   </head>
-  <link rel="icon" type="image/x-icon" href="./resources/logo.png">
+  <link rel="icon" type="image/x-icon" href="./resources/logo.png" />
   <link rel="stylesheet" href="./style/style.css" />
   <link rel="stylesheet" href="./style/footer.css" />
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"> -->
@@ -244,18 +244,18 @@
             <p>
               Silver Impregnated Graphite (SIG) contacts are used in high safety
               applications of railway signaling, traffic signaling, and numerous
-              other applications due to high silver content that eliminates the
-              risk of welding in the presence of graphite. High contact
-              resistance (>200mΩ) was observed in the SIG contacts in a railway
-              signaling operation after a few thousand operations of the relay.
-              The high contact resistance was discovered to be a result of loose
-              dust/foreign particles residing between the two contacts. Silver
-              had been preferentially removed from the contacting surfaces
-              during switching operations by an abrading effect of the
-              dust/foreign particles, leaving only graphite on the contact area.
-              Wear was accentuated by the presence of porosity and low hardness
-              of the contacts, leading to improper interaction between the
-              mating surfaces.
+              other applications that eliminates the risk of welding in the
+              presence of graphite. High contact resistance (>200mΩ) was
+              observed in the SIG contacts in a railway signaling operation
+              after a few thousand operations of the relay. The high contact
+              resistance was discovered to be a result of loose dust/foreign
+              particles residing between the two contacts. Silver had been
+              preferentially removed from the contacting surfaces during
+              switching operations by an abrading effect of the dust/foreign
+              particles, leaving only graphite on the contact area. Wear was
+              accentuated by the presence of porosity and low hardness of the
+              contacts, leading to improper interaction between the mating
+              surfaces.
             </p>
             <a href="./pages/product1.html">
               <button>View More</button>
@@ -307,10 +307,10 @@
               profound understanding of the intricacies of contact operation and
               an unwavering focus on quality, the firm has developed Silver
               Impregnated Graphite Contacts that are compatible with a wide
-              range of signaling relays conforming to IRS S-67-85 Standards. This
-              compatibility has been validated by a vast database of satisfied
-              customers who rely on CAg Industries' products for critical
-              contact applications.
+              range of signaling relays conforming to IRS S-67-85 Standards.
+              This compatibility has been validated by a vast database of
+              satisfied customers who rely on CAg Industries' products for
+              critical contact applications.
             </p>
             <a href="./pages/about.html">
               <button>Read More</button>
@@ -324,23 +324,7 @@
         <section id="sec-4">
           <div class="text4">
             <p style="font-size: 1.4vmax; color: #fff">
-              Silver Impregnated Graphite contacts are generally tested for
-              dimensions, crushing strength, silver content, hardness, ash
-              content, distribution of silver in the graphite matrix, contact
-              resistance, X-ray mapping of silver, microstructure, life test,
-              surface finish, and bulk density. The quality assurance of
-              electrical contacts is often treated as an evaluation of
-              "components in great quantity" and tested with statistical
-              methods. This maybe the reasonable for the registration of
-              fabrication defects, but consideration is also required for
-              systematic failures related to specific materials, environmental
-              influences during processing, application, and so forth. Failures
-              caused by environmental influence occur late in the lifetime of
-              the contact or component and may not be detected by early
-              evaluations. Additionally, contamination on the surface of
-              contacts and have deleterious effect on the contact and switching
-              properties and may, in extreme cases, lead to early failure of
-              devices.
+              Silver Impregnated Graphite relay contacts combine the best properties of silver and graphite into a composite material. Distinctive features of the SIG material include its hard fusing characteristic, better conduction of heat and electricity, and easy brazing. Graphite carbon has high heat of vaporization and appreciably low material transfer in the localized high temperature spots developed during mating of contacts. This combination of properties makes these contacts suitable for high safety applications such as railway signaling, traffic signaling, and numerous other applications.
             </p>
           </div>
           <img class="s-img4" src="./resources/p5.jpg" alt="" />
@@ -362,9 +346,11 @@
           </nav>
         </section>
         <section class="con">
-          <span> <i class="fa-solid fa-envelope"></i>cagindustries21@gmail.com</span>
-        <span> <i class="fa-solid fa-phone"></i> +91 8240563793</span>
-        <span> <i class="fa-solid fa-phone"></i> +91 9830951383</span>
+          <span>
+            <i class="fa-solid fa-envelope"></i>cagindustries21@gmail.com</span
+          >
+          <span> <i class="fa-solid fa-phone"></i> +91 8240563793</span>
+          <span> <i class="fa-solid fa-phone"></i> +91 9830951383</span>
           <div class="icons">
             <a href="https://g.co/kgs/E7WXVkK" target="_blank">
               <i class="fa-brands fa-google"></i>
